# SprintMate-Backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/: config.py
src/db/: db.py  deps.py
src/entities/: enums.py  mixins.py  models.py  schemas.py
src/repositories/: attachment_repository.py  board_repository.py  comment_repository.py  notification_config_repository.py  notification_repository.py  planning_poker_repository.py  planning_poker_vote_repository.py  project_repository.py  sprint_repository.py  task_repository.py  user_repository.py  user_task_repository.py
src/routers/: _planning_poker.py  auth.py  me.py  planning_poker.py  planning_poker_ws.py  project.py  sprint.py  task.py  user.py
src/schemas/: user.py
src/service/: attachment_service.py  auth_service.py  board_service.py  comment_service.py  email_validation.py  jwt_tokens.py  me_service.py  notification_config_service.py  notification_service.py  planning_poker_service.py  planning_poker_vote_service.py  project_service.py  reset_password.py  sprint_service.py  task_service.py  user_service.py
src/utils/: dependencies.py  exceptions.py  send_email.py
src/websocket/: connection_manager.py
