[project]
name = "sprintmate-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "biaa04",email = "93286481+biaa04@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "decouple (>=0.0.7,<0.0.8)",
    "fastapi-mail (>=1.6.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
